# pyipatcher

./: .gitignore  README.md  install.sh  kernelpatcher  patchfinder64.py  pyproject.toml
patchfinder64/: __init__.py  kernelpatcher.py  patchfinder64.py
pyipatcher/: __init__.py  __main__.py  ipatcher.py  kernelpatcher.py  logger.py  patchfinder64.py  wikiproxy.py
pyipatcher/cli/: asr.py  asrpatcher.py  ibootpatcher.py  kernel.py  kernelpatcher.py  ramdiskpatcher.py
pyipatcher/patchfinder/: asrpatchfinder.py  ibootpatchfinder.py  insn.py  kernelpatchfinder.py  patchfinder64.py  rextpatchfinder.py
